# appointment-app

./: .gitignore  Dockerfile  LICENSE  README.md  REMINDER.md  pyproject.toml
.github/: copilot-instructions.md
src/appointment_app/: app.py
src/appointment_app/intranet/api/: client.py
src/appointment_app/intranet/conf/: settings.py
src/appointment_app/intranet/models/: client.py
src/appointment_app/intranet/ui/: client.py
src/appointment_reminder/: __init__.py  app.py
src/intranet/: __init__.py  app.py
src/intranet/api/: client.py
src/intranet/conf/: application.json
src/intranet/db/: __init__.py
src/intranet/models/: client.py
src/intranet/ui/: client.py
tests/: test_client_api.py  test_client_model.py
